--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,24 @@ data_ingestion:
   dataset_name: "lex_glue"
   subset_name: "ledgar" 
   local_data_file: artifacts/data_ingestion/data.csv
+
+data_validation:
+  root_dir: artifacts/data_validation
+  report_file: artifacts/data_validation/status.txt
+  required_files: ["train.csv", "test.csv", "validation.csv"]
+
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/train.csv
+  tokenizer_name: distilbert-base-uncased
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  data_path: artifacts/data_transformation/samsum_dataset
+  model_ckpt: distilbert-base-uncased
+
+model_evaluation:
+  root_dir: artifacts/model_evaluation
+  data_path: artifacts/data_transformation/samsum_dataset
+  model_path: artifacts/model_trainer/bert-classifier
+  metric_file_name: artifacts/model_evaluation/metrics.json
